--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.chewie_on_a_diet_02_v_layout"
-        minSdkVersion 16
+        minSdkVersion 19
+        multiDexEnabled true
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -26,8 +27,9 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 }
