--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,27 +9,39 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity11"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity10"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity9"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity8"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity7"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity6"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity5"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity4"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity3"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity2"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity"
+        <activity android:name=".MainActivity12"></activity>
+        <activity
+            android:name=".MainActivity11"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity10"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity9"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity8"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity7"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity6"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity5"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity4"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity3"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity2"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
