--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,38 +9,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity14"></activity>
-        <activity android:name=".MainActivity13" />
-        <activity android:name=".MainActivity12" />
+        <activity android:name=".MainActivity14makeactivityobject"></activity>
+        <activity android:name=".MainActivity13makedrinkobject" />
+        <activity android:name=".MainActivity12makefoodobject" />
         <activity
-            android:name=".MainActivity11"
+            android:name=".MainActivity11settings"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity10"
+            android:name=".MainActivity10account"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity9"
+            android:name=".MainActivity9activity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity8"
+            android:name=".MainActivity8drink"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity7"
+            android:name=".MainActivity7food"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity6"
+            android:name=".MainActivity6weight"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity5"
+            android:name=".MainActivity5add"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity4"
+            android:name=".MainActivity4today"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity3"
+            android:name=".MainActivity3home"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity2"
+            android:name=".MainActivity2dashboard"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
